--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,36 @@
     {%endif%}
 </head>
     <body>
+        <header class="site-header">
+            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+              <div class="container">
+                <a class="navbar-brand mr-4" href="/">Pitch App</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                  <div class="navbar-nav mr-auto">
+                    <a class="nav-item nav-link" href="/">Home</a>
+                    <a class="nav-item nav-link" href="/about">About</a>
+                  </div>
+                  <!-- Navbar Right Side -->
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="/login">Login</a>
+                    <a class="nav-item nav-link" href="/register">Register</a>
+                  </div>
+                </div>
+              </div>
+            </nav>
+          </header>
+          {% with messages = get_flashed_messages(with_categories = true) %}
+            {% if messages %}
+            {% endif %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{category}}">
+                        {{message}}
+                    </div>
+                {% endfor %}
+          {% endwith %}
         {% block content %}{% endblock %}
 
 
