--- a/pitchapp/templates/about.html
+++ b/pitchapp/templates/about.html
@@ -1,4 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
-    <h1>This is my about page</h1>
+    <h1>In life, you only have 60 seconds to impress someone. 1 minute can make or break you. How do we make sure that you use your 1 minute to actually say something meaningful?
+
+        This application allows you to use that one minute wisely. You will submit your one minute pitch and other users will vote on it and leave comments to give their feedback on it.</h1>
 {% endblock %}
