--- a/pitchapp/templates/main.html
+++ b/pitchapp/templates/main.html
@@ -14,12 +14,12 @@
         </article>
         <div class="card-footer"><small class="text-muted">
           <div class="row">
-            <div class="col" style="height: 10px; width:10px;"><i class="fa-solid fa-thumbs-up" ></i></div>
-            <div class="col"><i class="fa-solid fa-thumbs-down"></i></div>
+            <div class="col" style="height: 10px; width:10px;"> <a href="#"><i class="fa-solid fa-thumbs-up" ></i></a> </div>
+            <div class="col"> <a href="#"> <i class="fa-solid fa-thumbs-down"></i></a></div>
             <div class="col"><a href="{{ url_for('comment_post', post_id=post.id) }}" class="btn btn-info btn-rounded btn-sm"> Leave a Comment</a></div>
           </div>
           <br>
-          Comments:
+          <strong> Comments:</strong>
           
 
         </small></div>
